--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,6 @@
         "*.mq5": "cpp"
     },
     "C_Cpp.default.forcedInclude": [
-        "c:\\Users\\Jessica Kraus\\.vscode\\extensions\\l-i-v.mql-tools-2.0.2\\data\\mql5_en.mqh"
+        "c:\\Users\\Mauro\\.vscode\\extensions\\l-i-v.mql-tools-2.0.2\\data\\mql5_en.mqh"
     ]
 }
