Finishes MA & RSI expert advisor

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,8 @@
     },
     "C_Cpp.default.forcedInclude": [
         "c:\\Users\\Mauro\\.vscode\\extensions\\l-i-v.mql-tools-2.0.2\\data\\mql5_en.mqh"
+    ],
+    "cSpell.words": [
+        "LASTBAR"
     ]
 }
