Finishes EA with MA and RSI with moving stop loss

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,7 @@
         "c:\\Users\\Mauro\\.vscode\\extensions\\l-i-v.mql-tools-2.0.2\\data\\mql5_en.mqh"
     ],
     "cSpell.words": [
-        "LASTBAR"
+        "LASTBAR",
+        "SLTP"
     ]
 }
